Chapter2/1.8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-step5-svc
spec:
  type: ClusterIP
  selector:
    app: project-step5
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
